--- a/package.json
+++ b/package.json
@@ -10,81 +10,89 @@
   "typings": "dist/src/index.d.ts",
   "scripts": {
     "build": "webpack --config webpack.config.js  --progress --profile --bail",
+    "build-demo": "webpack --config webpack.demo.config.js  --progress --profile --bail",
     "clean:dist": "npm run rimraf -- dist",
-    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
+    "clean:demo": "npm run rimraf -- demo-dist",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist demo-dist",
     "lint": "npm run tslint \"src/**/*.ts\"",
     "prebuild": "npm run clean:dist",
+    "preserver:demo": "npm run clean:demo",
     "rimraf": "rimraf",
-    "start": "npm run build",
+    "start": "npm run build && npm run server:demo",
+    "server:demo": "webpack-dev-server --config webpack.demo.config.js --progress --profile --watch --content-base demo/",
     "tslint": "tslint",
     "webpack-dev-server": "webpack-dev-server",
     "webpack": "webpack"
   },
   "peerDependencies": {
-    "@angular/common": "~2.0.0",
-    "@angular/compiler": "~2.0.0",
-    "@angular/core": "~2.0.0",
-    "@angular/forms": "~2.0.0",
-    "rxjs": "~5.0.0-beta.12",
-    "zone.js": "~0.6.21"
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.25"
   },
   "devDependencies": {
-    "@angular/common": "~2.0.0",
-    "@angular/compiler": "~2.0.0",
-    "@angular/core": "~2.0.0",
-    "@angular/forms": "~2.0.0",
-    "@types/core-js": "^0.9.28",
-    "@types/hammerjs": "^2.0.28",
-    "@types/jasmine": "^2.2.29",
-    "@types/node": "^6.0.38",
-    "@types/protractor": "^1.5.16",
-    "@types/selenium-webdriver": "^2.44.26",
-    "@types/source-map": "^0.1.26",
-    "@types/uglify-js": "^2.0.27",
-    "@types/webpack": "^1.12.29",
-    "angular2-template-loader": "^0.5.0",
-    "awesome-typescript-loader": "^2.2.1",
-    "codelyzer": "~0.0.28",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.25.0",
-    "exports-loader": "^0.6.3",
-    "expose-loader": "^0.7.1",
-    "file-loader": "^0.9.0",
-    "gh-pages": "^0.11.0",
-    "html-webpack-plugin": "^2.21.0",
-    "imports-loader": "^0.6.5",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "json-loader": "^0.5.4",
-    "karma": "^1.2.0",
-    "karma-chrome-launcher": "^2.0.0 ",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/platform-server": "2.0.0",
+    "@angular/router": "3.0.0",
+    "@types/core-js": "0.9.28",
+    "@types/hammerjs": "2.0.33",
+    "@types/jasmine": "2.5.35",
+    "@types/node": "6.0.45",
+    "@types/protractor": "1.5.20",
+    "@types/selenium-webdriver": "2.44.29",
+    "@types/source-map": "0.1.28",
+    "@types/uglify-js": "2.6.28",
+    "@types/webpack": "1.12.35",
+    "angular2-template-loader": "0.5.0",
+    "codelyzer": "0.0.28",
+    "copy-webpack-plugin": "3.0.1",
+    "core-js": "2.4.1",
+    "css-loader": "0.25.0",
+    "exports-loader": "0.6.3",
+    "expose-loader": "0.7.1",
+    "file-loader": "0.9.0",
+    "gh-pages": "0.11.0",
+    "html-webpack-plugin": "2.22.0",
+    "imports-loader": "0.6.5",
+    "istanbul-instrumenter-loader": "0.2.0",
+    "json-loader": "0.5.4",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0 ",
+    "karma-coverage": "1.1.1",
+    "karma-jasmine": "1.0.2",
+    "karma-mocha-reporter": "2.2.0",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
-    "parse5": "^1.3.2",
-    "protractor": "^3.2.2",
+    "parse5": "1.5.1",
+    "protractor": "3.3.0",
     "raw-loader": "0.5.1",
-    "remap-istanbul": "^0.6.3",
-    "rimraf": "^2.5.2",
-    "rxjs": "~5.0.0-beta.12",
-    "source-map-loader": "^0.1.5",
-    "string-replace-loader": "github:gdi2290/string-replace-loader",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.4",
+    "remap-istanbul": "0.6.4",
+    "rimraf": "2.5.4",
+    "source-map-loader": "0.1.5",
+    "string-replace-loader": "1.0.5",
+    "style-loader": "0.13.1",
+    "to-string-loader": "1.1.5",
     "ts-helpers": "1.1.1",
-    "ts-node": "^1.3.0",
-    "tslint": "3.15.0-dev.0",
-    "tslint-loader": "^2.1.3",
-    "typedoc": "^0.4.4",
-    "typescript": "2.0.0",
-    "url-loader": "^0.5.7",
+    "ts-loader": "0.9.4",
+    "ts-node": "1.4.1",
+    "tslint": "3.15.1",
+    "tslint-loader": "2.1.5",
+    "typedoc": "0.4.5",
+    "typescript": "2.0.3",
+    "url-loader": "0.5.7",
     "webpack": "2.1.0-beta.22",
-    "webpack-dev-middleware": "1.7.0",
-    "webpack-dev-server": "2.1.0-beta.4",
-    "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "^0.14.1",
-    "zone.js": "~0.6.21"
+    "webpack-dev-middleware": "1.8.4",
+    "webpack-dev-server": "2.1.0-beta.5",
+    "webpack-md5-hash": "0.0.5",
+    "webpack-merge": "0.14.1"
   },
   "engines": {
     "node": ">= 4.2.1",
