demo application (consumes and demos library components)

--- a/.gitignore
+++ b/.gitignore
@@ -45,12 +45,14 @@ npm-debug.log
 
 # Dist #
 /dist
+/demo-dist
 /public/__build__/
 /src/*/__build__/
 /__build__/**
 /public/dist/
 /src/*/dist/
 /dist/**
+/demo-dist/**
 .webpack.json
 
 # Doc #
