--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "raw-loader": "0.5.1",
     "remap-istanbul": "0.6.4",
     "rimraf": "2.5.4",
+    "rxjs": "5.0.0-beta.12",
     "source-map-loader": "0.1.5",
     "string-replace-loader": "1.0.5",
     "style-loader": "0.13.1",
@@ -92,7 +93,8 @@
     "webpack-dev-middleware": "1.8.4",
     "webpack-dev-server": "2.1.0-beta.5",
     "webpack-md5-hash": "0.0.5",
-    "webpack-merge": "0.14.1"
+    "webpack-merge": "0.14.1",
+    "zone.js": "0.6.25"
   },
   "engines": {
     "node": ">= 4.2.1",
